--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-router-dom": "^4.4.0-beta.8",
     "react-scripts": "^3.4.3",
     "react-spring": "^8.0.27",
+    "react-test-renderer": "^17.0.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
